[gd_scene load_steps=20 format=3 uid="uid://chjadf2wp68nl"]

[ext_resource type="Script" path="res://Code/Components/SimpleMob.gd" id="1_5x801"]
[ext_resource type="Script" path="res://Code/Components/Aggro.gd" id="2_hbkp2"]
[ext_resource type="Script" path="res://Code/Components/MobMovement.gd" id="3_x6253"]
[ext_resource type="Script" path="res://Code/Components/MobAbilities.gd" id="4_hrisj"]
[ext_resource type="Script" path="res://Code/AbilityComponents/Core/AbilityRunner.gd" id="5_8uhus"]
[ext_resource type="PackedScene" uid="uid://b6g10et2otcpu" path="res://Scenes/Components/mob_health.tscn" id="6_6ccxx"]
[ext_resource type="PackedScene" uid="uid://cniq41shbsxkv" path="res://Scenes/Inheritable/animatable_unit.tscn" id="7_gmi3b"]
[ext_resource type="Shader" path="res://Code/Rendering/visible_mask.gdshader" id="7_nw3jo"]
[ext_resource type="Shader" path="res://Code/Rendering/outline.gdshader" id="8_6grr4"]

[sub_resource type="Curve" id="Curve_qgu2a"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_i8vk3"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xv6qx"]
radius = 343.91

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_g53wp"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AbilityRunner:unit_local:_is_special")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("AbilityRunner:unit_local:_dict")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("MobHealth:health")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="Gradient" id="Gradient_i0q1b"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wj5il"]
gradient = SubResource("Gradient_i0q1b")
width = 25
height = 25
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wiefb"]
shader = ExtResource("7_nw3jo")

[sub_resource type="ViewportTexture" id="ViewportTexture_ua3r3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k0xxp"]
shader = ExtResource("8_6grr4")
shader_parameter/outline_color = Color(0.75, 0, 0.0124998, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_g5ttt"]
viewport_path = NodePath("SubViewport")

[node name="Simple Mob" type="CharacterBody2D"]
collision_layer = 35
collision_mask = 69
motion_mode = 1
script = ExtResource("1_5x801")
movement_speed = 100.0

[node name="Aggro" type="Node" parent="." node_paths=PackedStringArray("vision", "runner")]
script = ExtResource("2_hbkp2")
vision = NodePath("../Vision Range")
runner = NodePath("../AbilityRunner")

[node name="Movement" type="Node" parent="." node_paths=PackedStringArray("vision", "runner", "aggro")]
unique_name_in_owner = true
script = ExtResource("3_x6253")
vision = NodePath("../Vision Range")
runner = NodePath("../AbilityRunner")
movement_threshold = 0.1
aggro = NodePath("../Aggro")
target_min_distance = 28.0
target_max_distance = 150.0
target_inside_strength = 0.0
mob_avoidance_max_range = 50.0
mob_avoidance_strength = SubResource("Curve_qgu2a")

[node name="MobAbilities" type="Node" parent="." node_paths=PackedStringArray("runner")]
script = ExtResource("4_hrisj")
runner = NodePath("../AbilityRunner")

[node name="AbilityRunner" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("character", "health", "animator", "visual_offset")]
spawn_path = NodePath(".")
script = ExtResource("5_8uhus")
character = NodePath("..")
health = NodePath("../MobHealth")
animator = NodePath("../SubViewport/Animation")
visual_offset = NodePath("../Visuals")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i8vk3")

[node name="Vision Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision Range"]
shape = SubResource("CircleShape2D_xv6qx")
debug_color = Color(0, 0.647059, 0.254902, 0.0509804)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_g53wp")

[node name="MobHealth" parent="." instance=ExtResource("6_6ccxx")]
z_index = 300
position = Vector2(0, -27)
max_health = 16.0

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
size = Vector2i(32, 32)
render_target_update_mode = 4

[node name="Animation" parent="SubViewport" instance=ExtResource("7_gmi3b")]
unique_name_in_owner = true

[node name="Shadow" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_wj5il")

[node name="Visuals" type="Node2D" parent="."]

[node name="Mask" type="Sprite2D" parent="Visuals"]
material = SubResource("ShaderMaterial_wiefb")
position = Vector2(0, -8)
scale = Vector2(4, 4)
texture = SubResource("ViewportTexture_ua3r3")
centered = false
offset = Vector2(-16, -16)

[node name="Sprite" type="Sprite2D" parent="Visuals"]
z_index = 200
material = SubResource("ShaderMaterial_k0xxp")
position = Vector2(0, -8)
scale = Vector2(4, 4)
texture = SubResource("ViewportTexture_g5ttt")
centered = false
offset = Vector2(-16, -16)

[connection signal="health_depleted" from="MobHealth" to="." method="queue_free"]
